--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -1,14 +1,18 @@
 header{
     width: 100%;
     box-shadow: 0em 0.5em 1em lightgrey;
+    @media only screen and (min-device-width : 1024px){
+        box-shadow: 0 0 0 0 white;
+    }
 }
 header img{
     display: block;
     margin:auto;
     width: 50%;
     padding:1em;
-}
-body{
-    font-family: roboto;
-    
+    @media only screen and (min-device-width : 1024px){
+        margin: 0 0 10vw 0;
+        width: 30%;
+        margin: 0;
+    }
 }
