--- a/sass/Layouts/_search.scss
+++ b/sass/Layouts/_search.scss
@@ -1,23 +1,82 @@
-.search{
+.search {
     display: block;
     width: 100%;
     text-align: center;
-    & i{
-        position: absolute;
-        left: 0;
-        pointer-events: none;
-        font-size: 3em;
+    background-color:rgb(250, 250, 250) ;
+    padding-bottom: 10%;
+    @media only screen and (min-device-width : 1024px){
+        background-color:rgb(240, 240, 240) ;
+        border-radius: 2vw;   
+        padding-bottom:0;       
     }
-    & form input{
-        color: black;
-        width:100%;
-        background-color: lightgrey;
-        text-align: center;
-        border:0;
-        padding: 4%;
-        font-size: 3vw;
-        &:active{
-            border: 0px;
+    &_town {
+        display: block;
+        background-color: rgb(240, 240, 240);
+        padding: 3vw;
+        @media only screen and (min-device-width : 1024px){
+            padding: 0;
+            background: none;
+            background-color:rgb(235, 235, 235) ;
+        border-radius: 2vw 2vw 0 0 ; 
+        }
+        
+        & i {
+            font-size: 4vw;
+            margin: 0;
+            @media only screen and (min-device-width : 1024px){
+               
+            }
+        }
+        & input{
+            font-size: 4vw;
+            text-align: center;
+            background-color:rgb(240, 240, 240) ;
+            color: black;
+            opacity: 1;
+            font-weight: 700; 
+            position: relative;
+            background:none
+           
+           
         }
     }
+    & h1{
+        font-size: 6vw;
+        padding:3% 15% 0 15%;
+        @media only screen and (min-device-width : 1024px){
+            padding:0;  
+            font-size: 3vw;
+            margin: 0;    
+        }
+    }
+    & h2{
+        color: grey;
+        font-size: 4vw;
+        font-weight: 300;
+        padding: 0 15% 5% 15%;
+        @media only screen and (min-device-width : 1024px){
+            padding:0;  
+            font-size: 2vw;
+            margin: 0;    
+        }
+    }
+    & form button{
+        color: white;
+        font-weight: 700;
+        display: inline-block;
+        width: 50%;
+        font-size: 3vw;
+        border: 0;
+        padding: 3% 0 3% 0;
+        border-radius:10vw;
+        background: rgb(2,0,36);
+        background: linear-gradient(180deg, $colour-secondary, $colour-primary);
+        @media only screen and (min-device-width : 1024px){
+            padding:1.5vw;  
+            font-size: 1.7vw;
+            margin: 0; 
+            width: 25%;   
+        }
+    }
+
 }
