--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,5 @@
 @import "./Layouts/_header";
 @import "./Layouts/_search";
 @import "./Layouts/_working";
-
+@import "./Layouts/_restaurant";
+@import "./Layouts/_footer";
