--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -118,10 +118,122 @@ header img {
 }
 
 .working {
+  padding: 5vw 0 5vw 0;
+}
+.working h2 {
+  margin: 5vw;
   font-size: 6vw;
+  padding-bottom: 4vw;
+}
+.working_numbericon {
+  color: white;
+  position: absolute;
+  transform: translateX(-8vw);
+  background-color: #9356DC;
+  padding: 1vw 2vw 1vw 2vw;
+  border-radius: 5vw;
 }
 .working ol {
+  font-size: 4vw;
   list-style: none;
+  padding: 0;
+  width: 90%;
+  margin: 5vw;
+}
+.working ol li {
+  cursor: pointer;
+  display: block;
+  background-color: rgb(241, 241, 241);
+  margin: 5vw;
+  padding: 6vw;
+  border-radius: 5vw;
+}
+.working ol li:hover {
+  background-color: #e9def7;
+}
+.working ol li:hover i {
+  color: #9356DC;
+}
+.working ol li i {
+  font-size: 5vw;
+  padding: 0 5vw 0 5vw;
+  color: grey;
+}
+
+.restaurant {
+  width: 100%;
+  background-color: rgb(241, 240, 240);
+  padding-bottom: 15vw;
+}
+.restaurant_new {
+  position: absolute;
+  font-size: 6vw;
+  background-color: #99E2D0;
+  color: green;
+  left: 57%;
+  top: 7%;
+  padding: 4.5vw;
+  font-weight: 700;
+}
+.restaurant h2 {
+  font-size: 6vw;
+  padding: 10vw 0 0 5vw;
+}
+.restaurant article {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  border-radius: 7%;
+  background-color: white;
+  line-height: 1.2vw;
+  font-size: 4vw;
+  margin: 5vw 5vw 0vw 5vw;
+}
+.restaurant article h3 {
+  margin-left: 2vw;
+}
+.restaurant article p {
+  margin-left: 2vw;
+  padding-bottom: 1vw;
+}
+.restaurant article img {
+  width: 90vw;
+  height: 45vw;
+  object-fit: cover;
+}
+.restaurant article i {
+  position: absolute;
+  font-size: 6vw;
+  display: inline-block;
+  width: 95%;
+  transform: translatey(-12vw);
+  text-align: right;
+}
+
+footer {
+  font-size: 5vw;
+  color: white;
+  background-color: rgb(52, 52, 52);
+}
+footer img {
+  width: 30%;
+  height: 30%;
+  margin: 8vw 0 0vw 7vw;
+  filter: invert(100%);
+}
+footer ul {
+  padding-bottom: 7vw;
+}
+footer ul li {
+  line-height: 150%;
+  list-style: none;
+}
+footer ul li .fa-utensils {
+  padding-right: 5vw;
+}
+footer ul li .fa-handshake-angle {
+  padding-right: 3vw;
 }
 
 /*# sourceMappingURL=style.css.map */
