--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -1,7 +1,7 @@
 header{
     width: 100%;
     box-shadow: 0em 0.5em 1em lightgrey;
-    @media only screen and (min-device-width : 1024px){
+    @media only screen and (min-width : 1024px){
         box-shadow: 0 0 0 0 white;
     }
 }
@@ -10,7 +10,7 @@ header img{
     margin:auto;
     width: 50%;
     padding:1em;
-    @media only screen and (min-device-width : 1024px){
+    @media only screen and (min-width : 1024px){
         margin: 0 0 10vw 0;
         width: 30%;
         margin: 0;
