--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,239 @@
+body {
+  font-family: roboto;
+  margin: 0;
+}
 
+input {
+  border: none;
+}
+
+header {
+  width: 100%;
+  box-shadow: 0em 0.5em 1em lightgrey;
+}
+@media only screen and (min-device-width: 1024px) {
+  header {
+    box-shadow: 0 0 0 0 white;
+  }
+}
+
+header img {
+  display: block;
+  margin: auto;
+  width: 50%;
+  padding: 1em;
+}
+@media only screen and (min-device-width: 1024px) {
+  header img {
+    margin: 0 0 10vw 0;
+    width: 30%;
+    margin: 0;
+  }
+}
+
+.search {
+  display: block;
+  width: 100%;
+  text-align: center;
+  background-color: rgb(250, 250, 250);
+  padding-bottom: 10%;
+}
+@media only screen and (min-device-width: 1024px) {
+  .search {
+    background-color: rgb(240, 240, 240);
+    border-radius: 2vw;
+    padding-bottom: 0;
+  }
+}
+.search_town {
+  display: block;
+  background-color: rgb(240, 240, 240);
+  padding: 3vw;
+}
+@media only screen and (min-device-width: 1024px) {
+  .search_town {
+    padding: 0;
+    background: none;
+    background-color: rgb(235, 235, 235);
+    border-radius: 2vw 2vw 0 0;
+  }
+}
+.search_town i {
+  font-size: 4vw;
+  margin: 0;
+}
+.search_town input {
+  font-size: 4vw;
+  text-align: center;
+  background-color: rgb(240, 240, 240);
+  color: black;
+  opacity: 1;
+  font-weight: 700;
+  position: relative;
+  background: none;
+}
+.search h1 {
+  font-size: 6vw;
+  padding: 3% 15% 0 15%;
+}
+@media only screen and (min-device-width: 1024px) {
+  .search h1 {
+    padding: 0;
+    font-size: 3vw;
+    margin: 0;
+  }
+}
+.search h2 {
+  color: grey;
+  font-size: 4vw;
+  font-weight: 300;
+  padding: 0 15% 5% 15%;
+}
+@media only screen and (min-device-width: 1024px) {
+  .search h2 {
+    padding: 0;
+    font-size: 2vw;
+    margin: 0;
+  }
+}
+.search form button {
+  color: white;
+  font-weight: 700;
+  display: inline-block;
+  width: 50%;
+  font-size: 3vw;
+  border: 0;
+  padding: 3% 0 3% 0;
+  border-radius: 10vw;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(180deg, #FF79DA, #9356DC);
+}
+@media only screen and (min-device-width: 1024px) {
+  .search form button {
+    padding: 1.5vw;
+    font-size: 1.7vw;
+    margin: 0;
+    width: 25%;
+  }
+}
+
+.working {
+  padding: 5vw 0 5vw 0;
+}
+.working h2 {
+  margin: 5vw;
+  font-size: 6vw;
+  padding-bottom: 4vw;
+}
+.working_numbericon {
+  color: white;
+  position: absolute;
+  transform: translateX(-8vw);
+  background-color: #9356DC;
+  padding: 1vw 2vw 1vw 2vw;
+  border-radius: 5vw;
+}
+.working ol {
+  font-size: 4vw;
+  list-style: none;
+  padding: 0;
+  width: 90%;
+  margin: 5vw;
+}
+.working ol li {
+  cursor: pointer;
+  display: block;
+  background-color: rgb(241, 241, 241);
+  margin: 5vw;
+  padding: 6vw;
+  border-radius: 5vw;
+}
+.working ol li:hover {
+  background-color: #e9def7;
+}
+.working ol li:hover i {
+  color: #9356DC;
+}
+.working ol li i {
+  font-size: 5vw;
+  padding: 0 5vw 0 5vw;
+  color: grey;
+}
+
+.restaurant {
+  width: 100%;
+  background-color: rgb(241, 240, 240);
+  padding-bottom: 15vw;
+}
+.restaurant_new {
+  position: absolute;
+  font-size: 6vw;
+  background-color: #99E2D0;
+  color: green;
+  left: 57%;
+  top: 7%;
+  padding: 4.5vw;
+  font-weight: 700;
+}
+.restaurant h2 {
+  font-size: 6vw;
+  padding: 10vw 0 0 5vw;
+}
+.restaurant article {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 90%;
+  border-radius: 7%;
+  background-color: white;
+  line-height: 1.2vw;
+  font-size: 4vw;
+  margin: 5vw 5vw 0vw 5vw;
+}
+.restaurant article h3 {
+  margin-left: 2vw;
+}
+.restaurant article p {
+  margin-left: 2vw;
+  padding-bottom: 1vw;
+}
+.restaurant article img {
+  width: 90vw;
+  height: 45vw;
+  object-fit: cover;
+}
+.restaurant article i {
+  position: absolute;
+  font-size: 6vw;
+  display: inline-block;
+  width: 95%;
+  transform: translatey(-12vw);
+  text-align: right;
+}
+
+footer {
+  font-size: 5vw;
+  color: white;
+  background-color: rgb(52, 52, 52);
+}
+footer img {
+  width: 30%;
+  height: 30%;
+  margin: 8vw 0 0vw 7vw;
+  filter: invert(100%);
+}
+footer ul {
+  padding-bottom: 7vw;
+}
+footer ul li {
+  line-height: 150%;
+  list-style: none;
+}
+footer ul li .fa-utensils {
+  padding-right: 5vw;
+}
+footer ul li .fa-handshake-angle {
+  padding-right: 3vw;
+}
 
 /*# sourceMappingURL=style.css.map */
