--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,11 +7,23 @@ input {
   border: none;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: black;
+}
+
+li {
+  list-style: none;
+}
+
 header {
   width: 100%;
   box-shadow: 0em 0.5em 1em lightgrey;
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   header {
     box-shadow: 0 0 0 0 white;
   }
@@ -23,12 +35,18 @@ header img {
   width: 50%;
   padding: 1em;
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   header img {
     margin: 0 0 10vw 0;
     width: 30%;
     margin: 0;
   }
+}
+
+.fa-arrow-left {
+  position: absolute;
+  font-size: 5vw;
+  padding: 3vw 0 0 3vw;
 }
 
 .search {
@@ -38,7 +56,7 @@ header img {
   background-color: rgb(250, 250, 250);
   padding-bottom: 10%;
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   .search {
     background-color: rgb(240, 240, 240);
     border-radius: 2vw;
@@ -50,7 +68,7 @@ header img {
   background-color: rgb(240, 240, 240);
   padding: 3vw;
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   .search_town {
     padding: 0;
     background: none;
@@ -76,7 +94,7 @@ header img {
   font-size: 6vw;
   padding: 3% 15% 0 15%;
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   .search h1 {
     padding: 0;
     font-size: 3vw;
@@ -89,7 +107,7 @@ header img {
   font-weight: 300;
   padding: 0 15% 5% 15%;
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   .search h2 {
     padding: 0;
     font-size: 2vw;
@@ -108,7 +126,7 @@ header img {
   background: rgb(2, 0, 36);
   background: linear-gradient(180deg, #FF79DA, #9356DC);
 }
-@media only screen and (min-device-width: 1024px) {
+@media all and (min-width: 1024px) {
   .search form button {
     padding: 1.5vw;
     font-size: 1.7vw;
@@ -120,10 +138,22 @@ header img {
 .working {
   padding: 5vw 0 5vw 0;
 }
+@media screen and (min-width: 1024px) {
+  .working {
+    padding: 2vw;
+  }
+}
 .working h2 {
   margin: 5vw;
   font-size: 6vw;
   padding-bottom: 4vw;
+}
+@media screen and (min-width: 1024px) {
+  .working h2 {
+    font-size: 3vw;
+    padding: 0 0 1.5vw 0.5vw;
+    margin: 0;
+  }
 }
 .working_numbericon {
   color: white;
@@ -133,12 +163,24 @@ header img {
   padding: 1vw 2vw 1vw 2vw;
   border-radius: 5vw;
 }
+@media screen and (min-width: 1024px) {
+  .working_numbericon {
+    font-size: 1vw;
+    padding: 1vw 1.2vw 1vw 1.2vw;
+    transform: translate(-1vw, 1.2vw);
+  }
+}
 .working ol {
   font-size: 4vw;
   list-style: none;
   padding: 0;
-  width: 90%;
   margin: 5vw;
+}
+@media screen and (min-width: 1024px) {
+  .working ol {
+    display: flex;
+    margin: 0;
+  }
 }
 .working ol li {
   cursor: pointer;
@@ -147,6 +189,17 @@ header img {
   margin: 5vw;
   padding: 6vw;
   border-radius: 5vw;
+}
+@media screen and (min-width: 1024px) {
+  .working ol li {
+    flex-direction: row;
+    display: inline;
+    margin: 0 1.5vw 0 1.5vw;
+    padding: 0.5vw 0 0.5vw 0;
+    font-size: 1.5vw;
+    border-radius: 2vw;
+    width: 30%;
+  }
 }
 .working ol li:hover {
   background-color: #e9def7;
@@ -159,11 +212,27 @@ header img {
   padding: 0 5vw 0 5vw;
   color: grey;
 }
+@media screen and (min-width: 1024px) {
+  .working ol li i {
+    font-size: 1.5vw;
+    padding: 2vw 2vw 2vw 3vw;
+  }
+}
 
 .restaurant {
   width: 100%;
   background-color: rgb(241, 240, 240);
   padding-bottom: 15vw;
+}
+@media screen and (min-width: 1024px) {
+  .restaurant {
+    width: 94%;
+    padding: 0vw 2vw 2vw 2vw;
+    margin-left: 1vw;
+    border-radius: 3vw;
+    margin-top: 0;
+    margin-bottom: 2vw;
+  }
 }
 .restaurant_new {
   position: absolute;
@@ -175,9 +244,24 @@ header img {
   padding: 4.5vw;
   font-weight: 700;
 }
+@media screen and (min-width: 1024px) {
+  .restaurant_new {
+    left: 57%;
+    top: 5%;
+    padding: 1vw 2vw 1vw 2vw;
+    font-size: 1vw;
+  }
+}
 .restaurant h2 {
   font-size: 6vw;
   padding: 10vw 0 0 5vw;
+}
+@media screen and (min-width: 1024px) {
+  .restaurant h2 {
+    font-size: 3vw;
+    padding: 1vw 0 0 2vw;
+    margin-top: 0;
+  }
 }
 .restaurant article {
   cursor: pointer;
@@ -190,17 +274,43 @@ header img {
   font-size: 4vw;
   margin: 5vw 5vw 0vw 5vw;
 }
+@media screen and (min-width: 1024px) {
+  .restaurant article {
+    margin: 0 2vw 0 0;
+    font-size: 3vw;
+  }
+}
 .restaurant article h3 {
   margin-left: 2vw;
+}
+@media screen and (min-width: 1024px) {
+  .restaurant article h3 {
+    font-size: 1.5vw;
+    padding: 1vw 0 1vw 0;
+    margin: 0 0 0 1vw;
+  }
 }
 .restaurant article p {
   margin-left: 2vw;
   padding-bottom: 1vw;
 }
+@media screen and (min-width: 1024px) {
+  .restaurant article p {
+    font-size: 1.5vw;
+    padding: 0 0 1vw 0;
+    margin: 0 0 0 1vw;
+  }
+}
 .restaurant article img {
   width: 90vw;
   height: 45vw;
   object-fit: cover;
+}
+@media screen and (min-width: 1024px) {
+  .restaurant article img {
+    width: 30vw;
+    height: 14vw;
+  }
 }
 .restaurant article i {
   position: absolute;
@@ -210,11 +320,28 @@ header img {
   transform: translatey(-12vw);
   text-align: right;
 }
+@media screen and (min-width: 1024px) {
+  .restaurant article i {
+    font-size: 2vw;
+    transform: translatey(-4vw);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    display: flex;
+  }
+}
 
 footer {
   font-size: 5vw;
   color: white;
   background-color: rgb(52, 52, 52);
+}
+@media all and (min-width: 1024px) {
+  footer {
+    font-size: 2vw;
+  }
 }
 footer img {
   width: 30%;
@@ -222,18 +349,66 @@ footer img {
   margin: 8vw 0 0vw 7vw;
   filter: invert(100%);
 }
+@media all and (min-width: 1024px) {
+  footer img {
+    width: 10%;
+    height: 10%;
+    margin: 2vw 0 0vw 1vw;
+  }
+}
 footer ul {
   padding-bottom: 7vw;
+  margin: 0;
+}
+@media all and (min-width: 1024px) {
+  footer ul {
+    display: flex;
+    padding: 1vw 0 1vw 0;
+  }
 }
 footer ul li {
   line-height: 150%;
   list-style: none;
 }
+@media all and (min-width: 1024px) {
+  footer ul li {
+    padding: 0 1vw 0 1vw;
+  }
+}
 footer ul li .fa-utensils {
   padding-right: 5vw;
+  padding-right: 1vw;
 }
 footer ul li .fa-handshake-angle {
   padding-right: 3vw;
+  padding-right: 1vw;
+}
+.entete {
+  width: 100%;
+  display: block;
+  position: relative;
+}
+.entete img {
+  width: 100%;
+}
+.entete_title {
+  position: absolute;
+  width: 100%;
+  background-color: white;
+  border-radius: 5vw 5vw 0 0;
+  bottom: 0.2vw;
+}
+.entete h1 {
+  font-family: Shrikhand;
+  font-size: 8vw;
+  margin: 0;
+  padding: 4vw 0 0 2vw;
+}
+.entete i {
+  font-size: 7vw;
+  position: absolute;
+  bottom: 3vw;
+  right: 3vw;
 }
 
 /*# sourceMappingURL=style.css.map */
