--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -1,7 +1,8 @@
 header{
     width: 100%;
     box-shadow: 0em 0.5em 1em lightgrey;
-    @media only screen and (min-width : 1024px){
+    @media all and (min-width: 1024px)
+{
         box-shadow: 0 0 0 0 white;
     }
 }
@@ -10,9 +11,15 @@ header img{
     margin:auto;
     width: 50%;
     padding:1em;
-    @media only screen and (min-width : 1024px){
+    @media all and (min-width: 1024px)
+{
         margin: 0 0 10vw 0;
         width: 30%;
         margin: 0;
     }
+}
+.fa-arrow-left{
+    position: absolute;
+    font-size: 5vw;
+padding: 3vw 0 0 3vw;
 }
