--- a/sass/Layouts/_restaurant.scss
+++ b/sass/Layouts/_restaurant.scss
@@ -1,7 +1,15 @@
 .restaurant{
-    width: 100%;
+    width:100%;
     background-color: rgb(241, 240, 240);
     padding-bottom: 15vw;
+    @media screen and(min-width : 1024px) {
+        width:94%;
+        padding: 0vw 2vw 2vw 2vw;
+        margin-left: 1vw;
+        border-radius: 3vw;
+        margin-top: 0;
+        margin-bottom: 2vw;
+    }
     &_new{
         position: absolute;
         font-size: 6vw;
@@ -11,13 +19,25 @@
         top: 7%;
         padding: 4.5vw;
         font-weight: 700;
+        @media screen and(min-width : 1024px) {
+        left: 57%;
+        top: 5%;
+        padding: 1vw 2vw 1vw 2vw;
+        font-size: 1vw;
+        }
     }
     & h2{
         font-size: 6vw;
         padding: 10vw 0 0 5vw;
+        @media screen and(min-width : 1024px) {
+            font-size: 3vw;
+            padding: 1vw 0 0 2vw;
+            margin-top:0 ;
+        }
         
     }
     & article{
+
         
         cursor: pointer;
         position: relative;
@@ -28,22 +48,38 @@
         line-height: 1.2vw;
         font-size: 4vw;
         margin: 5vw 5vw 0vw 5vw;
+        @media screen and(min-width : 1024px) {
+            margin: 0 2vw 0 0;
+            font-size: 3vw;
+        }
         
         & h3{
-            
             margin-left: 2vw;
+            @media screen and(min-width : 1024px) {
+                font-size: 1.5vw;
+                padding: 1vw 0 1vw 0;
+                margin: 0 0 0 1vw;
+            }
             
         }
         & p{
-            
             margin-left: 2vw; 
             padding-bottom: 1vw;
+            @media screen and(min-width : 1024px) {
+                font-size: 1.5vw;
+                padding: 0 0 1vw 0;
+                margin: 0 0 0 1vw;
+            }
         }
         & img{
             
             width: 90vw;
             height: 45vw;
             object-fit:cover;
+            @media screen and(min-width : 1024px) {
+                width: 30vw;
+                height: 14vw;
+            }
         }
         & i{ 
             
@@ -53,7 +89,17 @@
             width: 95%;
             transform:translatey(-12vw);
             text-align: right;
+            @media screen and(min-width : 1024px) {
+                font-size: 2vw;
+                transform:translatey(-4vw);
+            }
         }
        
     }
+}
+.container{
+    @media screen and(min-width : 1024px) {
+        display: flex;
+    }
+    
 }
