--- a/sass/Layouts/_search.scss
+++ b/sass/Layouts/_search.scss
@@ -4,7 +4,8 @@
     text-align: center;
     background-color:rgb(250, 250, 250) ;
     padding-bottom: 10%;
-    @media only screen and (min-width : 1024px){
+    @media all and (min-width: 1024px)
+{
         background-color:rgb(240, 240, 240) ;
         border-radius: 2vw;   
         padding-bottom:0;       
@@ -13,7 +14,8 @@
         display: block;
         background-color: rgb(240, 240, 240);
         padding: 3vw;
-        @media only screen and (min-width : 1024px){
+        @media all and (min-width: 1024px)
+{
             padding: 0;
             background: none;
             background-color:rgb(235, 235, 235) ;
@@ -23,7 +25,8 @@
         & i {
             font-size: 4vw;
             margin: 0;
-            @media only screen and (min-width : 1024px){
+            @media all and (min-width: 1024px)
+{
                
             }
         }
@@ -43,7 +46,8 @@
     & h1{
         font-size: 6vw;
         padding:3% 15% 0 15%;
-        @media only screen and (min-width : 1024px){
+        @media all and (min-width: 1024px)
+{
             padding:0;  
             font-size: 3vw;
             margin: 0;    
@@ -54,7 +58,8 @@
         font-size: 4vw;
         font-weight: 300;
         padding: 0 15% 5% 15%;
-        @media only screen and (min-width : 1024px){
+        @media all and (min-width: 1024px)
+{
             padding:0;  
             font-size: 2vw;
             margin: 0;    
@@ -71,7 +76,8 @@
         border-radius:10vw;
         background: rgb(2,0,36);
         background: linear-gradient(180deg, $colour-secondary, $colour-primary);
-        @media only screen and (min-width : 1024px){
+        @media all and (min-width: 1024px)
+{
             padding:1.5vw;  
             font-size: 1.7vw;
             margin: 0; 
