add css for menue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/_variables";
+@import "./layouts/_mixins";
 @import "./base/_body";
 @import "./Layouts/_header";
 @import "./Layouts/_search";
@@ -6,3 +7,4 @@
 @import "./Layouts/_restaurant";
 @import "./Layouts/_footer";
 @import "./Layouts/_entete-menue";
+@import "./Layouts/_menue";
