--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,6 +383,10 @@ footer ul li .fa-handshake-angle {
   padding-right: 3vw;
   padding-right: 1vw;
 }
+.lightgrey-background {
+  background-color: rgb(240, 240, 240);
+}
+
 .entete {
   width: 100%;
   display: block;
@@ -390,11 +394,13 @@ footer ul li .fa-handshake-angle {
 }
 .entete img {
   width: 100%;
+  height: 70VW;
+  object-fit: cover;
 }
 .entete_title {
   position: absolute;
   width: 100%;
-  background-color: white;
+  background-color: rgb(240, 240, 240);
   border-radius: 5vw 5vw 0 0;
   bottom: 0.2vw;
 }
@@ -409,6 +415,52 @@ footer ul li .fa-handshake-angle {
   position: absolute;
   bottom: 3vw;
   right: 3vw;
+}
+
+.title-menue {
+  padding-left: 4vw;
+}
+.title-menue:before {
+  border: 1px solid black;
+}
+
+.container-menue {
+  width: 95%;
+  padding: 0;
+  margin: auto;
+}
+.container-menue_plat {
+  background-color: white;
+  border-radius: 2vw;
+  box-shadow: 1vw 1vw 1vw lightgrey;
+  line-height: 50%;
+  padding: 0.5vw 0 0.5vw 1vw;
+  margin: 1.5vw;
+}
+
+.buttom-command {
+  color: white;
+  font-weight: 700;
+  display: inline-block;
+  width: 50%;
+  font-size: 3vw;
+  border: 0;
+  padding: 3% 0 3% 0;
+  border-radius: 10vw;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(180deg, #FF79DA, #9356DC);
+  display: block;
+  margin: auto;
+  margin-top: 10vw;
+  margin-bottom: 10vw;
+}
+@media all and (min-width: 1024px) {
+  .buttom-command {
+    padding: 1.5vw;
+    font-size: 1.7vw;
+    margin: 0;
+    width: 25%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
