--- a/sass/Layouts/_entete-menue.scss
+++ b/sass/Layouts/_entete-menue.scss
@@ -1,4 +1,8 @@
 // page menue
+.lightgrey-background{
+    background-color: rgb(240, 240, 240);
+
+}
 .entete{
     width: 100%;
     display: block;
@@ -7,11 +11,13 @@
     
     & img{
        width: 100%;
+       height:70VW;
+       object-fit: cover;
     }
     &_title{
         position: absolute;
         width: 100%;
-        background-color: white;
+        background-color: rgb(240, 240, 240);
         border-radius: 5vw 5vw 0 0;
         bottom: 0.2vw;
         
