--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: roboto;
   margin: 0;
+  width: 100%;
+  font-size: 4vw;
 }
 
 input {
@@ -37,16 +39,10 @@ header img {
 }
 @media all and (min-width: 1024px) {
   header img {
-    margin: 0 0 10vw 0;
     width: 30%;
     margin: 0;
+    padding: 1vw;
   }
-}
-
-.fa-arrow-left {
-  position: absolute;
-  font-size: 5vw;
-  padding: 3vw 0 0 3vw;
 }
 
 .search {
@@ -130,7 +126,6 @@ header img {
   .search form button {
     padding: 1.5vw;
     font-size: 1.7vw;
-    margin: 0;
     width: 25%;
   }
 }
@@ -144,7 +139,7 @@ header img {
   }
 }
 .working h2 {
-  margin: 5vw;
+  margin: 5vw 0 5vw 5vw;
   font-size: 6vw;
   padding-bottom: 4vw;
 }
@@ -220,14 +215,13 @@ header img {
 }
 
 .restaurant {
-  width: 100%;
   background-color: rgb(241, 240, 240);
   padding-bottom: 15vw;
 }
 @media screen and (min-width: 1024px) {
   .restaurant {
     width: 94%;
-    padding: 0vw 2vw 2vw 2vw;
+    padding: 0vw 0vw 2vw 2vw;
     margin-left: 1vw;
     border-radius: 3vw;
     margin-top: 0;
@@ -272,12 +266,14 @@ header img {
   background-color: white;
   line-height: 1.2vw;
   font-size: 4vw;
-  margin: 5vw 5vw 0vw 5vw;
+  margin: 5vw 0vw 0vw 5vw;
 }
 @media screen and (min-width: 1024px) {
   .restaurant article {
-    margin: 0 2vw 0 0;
+    margin: 0 0 0 0;
     font-size: 3vw;
+    display: block;
+    width: 80%;
   }
 }
 .restaurant article h3 {
@@ -308,8 +304,8 @@ header img {
 }
 @media screen and (min-width: 1024px) {
   .restaurant article img {
-    width: 30vw;
-    height: 14vw;
+    width: 24vw;
+    height: 12vw;
   }
 }
 .restaurant article i {
@@ -387,6 +383,17 @@ footer ul li .fa-handshake-angle {
   background-color: rgb(240, 240, 240);
 }
 
+.fa-arrow-left {
+  position: absolute;
+  font-size: 5vw;
+  padding: 4vw 0 0 3vw;
+}
+@media screen and (min-width: 1024px) {
+  .fa-arrow-left {
+    padding: 1vw 0vw 0 93vw;
+  }
+}
+
 .entete {
   width: 100%;
   display: block;
@@ -396,6 +403,12 @@ footer ul li .fa-handshake-angle {
   width: 100%;
   height: 70VW;
   object-fit: cover;
+}
+@media screen and (min-width: 1024px) {
+  .entete img {
+    height: 20VW;
+    padding: 0;
+  }
 }
 .entete_title {
   position: absolute;
@@ -410,32 +423,107 @@ footer ul li .fa-handshake-angle {
   margin: 0;
   padding: 4vw 0 0 2vw;
 }
+@media screen and (min-width: 1024px) {
+  .entete h1 {
+    font-size: 3vw;
+    padding-top: 2vw;
+  }
+}
 .entete i {
   font-size: 7vw;
   position: absolute;
-  bottom: 3vw;
+  bottom: 2vw;
   right: 3vw;
+}
+@media screen and (min-width: 1024px) {
+  .entete i {
+    font-size: 2.5vw;
+  }
 }
 
 .title-menue {
   padding-left: 4vw;
+  padding-bottom: 2vw;
+  font-size: 4vw;
 }
-.title-menue:before {
-  border: 1px solid black;
+@media screen and (min-width: 1024px) {
+  .title-menue {
+    font-size: 1.5vw;
+    margin: 0;
+    padding: 0 0 0 1.6vw;
+  }
+}
+.title-menue::before {
+  content: "";
+  background: #99E2D0;
+  width: 10vw;
+  height: 0.6vw;
+  display: block;
+  transform: translateY(6vw);
+}
+@media screen and (min-width: 1024px) {
+  .title-menue::before {
+    width: 4vw;
+    height: 0.3vw;
+    display: block;
+    transform: translateY(2vw);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .super-container {
+    display: flex;
+  }
+}
+@media screen and (min-width: 1024px) and (min-width: 1024px) {
+  .super-container article {
+    display: block;
+    width: 25%;
+    margin: 3vw;
+  }
 }
 
 .container-menue {
-  width: 95%;
   padding: 0;
   margin: auto;
 }
+@media screen and (min-width: 1024px) {
+  .container-menue {
+    width: 90%;
+  }
+}
 .container-menue_plat {
+  display: block;
+  width: 90%;
   background-color: white;
-  border-radius: 2vw;
+  border-radius: 3vw;
   box-shadow: 1vw 1vw 1vw lightgrey;
   line-height: 50%;
   padding: 0.5vw 0 0.5vw 1vw;
-  margin: 1.5vw;
+  margin: auto;
+  margin-bottom: 3vw;
+  position: relative;
+}
+@media screen and (min-width: 1024px) {
+  .container-menue_plat {
+    margin: 1vw 1vw 0 0;
+    padding: 1vw 7vw 1vw 0;
+    border-radius: 1vw;
+  }
+  .container-menue_plat h3, .container-menue_plat p, .container-menue_plat h2 {
+    padding-left: 1vw;
+  }
+}
+@media screen and (min-width: 1024px) and (min-width: 1024px) {
+  .container-menue_plat h3, .container-menue_plat p, .container-menue_plat h2 {
+    font-size: 1.5vw;
+    margin: 0;
+  }
+}
+.container-menue_plat .prix {
+  font-weight: 700;
+  position: absolute;
+  right: 2vw;
 }
 
 .buttom-command {
@@ -458,8 +546,13 @@ footer ul li .fa-handshake-angle {
   .buttom-command {
     padding: 1.5vw;
     font-size: 1.7vw;
-    margin: 0;
     width: 25%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .buttom-command {
+    margin-top: 5vw;
+    margin-bottom: 5vw;
   }
 }
 
