--- a/sass/Layouts/_entete-menue.scss
+++ b/sass/Layouts/_entete-menue.scss
@@ -3,6 +3,14 @@
     background-color: rgb(240, 240, 240);
 
 }
+.fa-arrow-left{
+    position: absolute;
+    font-size: 5vw;
+padding: 4vw 0 0 3vw;
+@media screen and(min-width : 1024px) {
+    padding: 1vw 0vw 0 93vw;
+  }
+}
 .entete{
     width: 100%;
     display: block;
@@ -13,6 +21,10 @@
        width: 100%;
        height:70VW;
        object-fit: cover;
+       @media screen and(min-width : 1024px) {
+        height:20VW;
+        padding: 0;
+      }
     }
     &_title{
         position: absolute;
@@ -22,6 +34,7 @@
         bottom: 0.2vw;
         
         
+        
     }
     & h1{
         
@@ -29,13 +42,21 @@
         font-size: 8vw;
         margin: 0;
         padding: 4vw 0 0 2vw;
+        @media screen and(min-width : 1024px) {
+            font-size: 3vw;
+            padding-top:2vw ;
+          }
         
         
     }
     & i{
         font-size: 7vw;
         position: absolute;
-        bottom: 3vw;
+        bottom: 2vw;
         right: 3vw;
+        @media screen and(min-width : 1024px) {
+            font-size: 2.5vw;
+          }
+      
     }
 }
