--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -13,13 +13,9 @@ header img{
     padding:1em;
     @media all and (min-width: 1024px)
 {
-        margin: 0 0 10vw 0;
         width: 30%;
         margin: 0;
+        padding: 1vw;
     }
 }
-.fa-arrow-left{
-    position: absolute;
-    font-size: 5vw;
-padding: 3vw 0 0 3vw;
-}
+
