--- a/sass/Layouts/_menue.scss
+++ b/sass/Layouts/_menue.scss
@@ -1,22 +1,90 @@
 
 .title-menue{
     padding-left: 4vw;
-    &:before {
-     border: 1px solid black;
+    padding-bottom: 2vw;
+    font-size: 4vw;
+    @media screen and(min-width : 1024px) {
+        font-size: 1.5vw;
+        margin: 0;
+        padding: 0 0 0 1.6vw ;
+                  
+        }
+        &::before {
+        content: "";
+        background:$colour-tertiary;
+        width:10vw;
+        height: 0.6vw;
+        display: block;
+        transform: translateY(6vw);
+        @media screen and(min-width : 1024px) {
+            width:4vw;
+            height: 0.3vw;
+            display: block;
+            transform: translateY(2vw)
+        }
+
     }
 }
-
+.super-container{
+        @media screen and(min-width : 1024px) {
+       display: flex;
+       & article{
+       
+    @media screen and(min-width : 1024px) {
+            display: block;
+            width:25% ;
+            margin: 3vw;
+            
+            
+          }
+          
+            
+      }
+}
+}
 .container-menue{
-    width:95%;
     padding: 0;
     margin: auto;
+    @media screen and(min-width : 1024px) {
+        width:90% ;
+         
+      }
+     
+          
+      
     &_plat{
+        display: block;
+        width: 90%;
         background-color:white ;
-        border-radius: 2vw;
+        border-radius: 3vw;
         box-shadow: 1vw 1vw 1vw lightgrey;
         line-height: 50%;
         padding: 0.5vw 0 0.5vw 1vw;
-        margin: 1.5vw;
+        margin: auto;
+        margin-bottom: 3vw;
+        position: relative;
+        @media screen and(min-width : 1024px) {
+          margin: 1vw 1vw 0 0;
+          padding: 1vw 7vw 1vw 0;
+          border-radius: 1vw;
+          & h3, p, h2{
+              padding-left: 1vw;
+              @media screen and(min-width : 1024px) {
+              font-size: 1.5vw;
+              margin: 0;
+                        
+                
+              }
+
+          }
+           
+          }
+        & .prix{
+            font-weight: 700;
+            position: absolute;
+            right: 2vw;
+
+        }
     }
 }
 .buttom-command{
@@ -25,4 +93,10 @@
     margin: auto;
     margin-top: 10vw;
     margin-bottom:10vw;
+    @media screen and(min-width : 1024px) {
+        margin-top:5vw;
+        margin-bottom: 5vw;
+          
+        }
+    
 }
