--- a/sass/Layouts/_restaurant.scss
+++ b/sass/Layouts/_restaurant.scss
@@ -1,10 +1,12 @@
+
+
+
 .restaurant{
-    width:100%;
     background-color: rgb(241, 240, 240);
     padding-bottom: 15vw;
     @media screen and(min-width : 1024px) {
         width:94%;
-        padding: 0vw 2vw 2vw 2vw;
+        padding: 0vw 0vw 2vw 2vw;
         margin-left: 1vw;
         border-radius: 3vw;
         margin-top: 0;
@@ -47,10 +49,12 @@
         background-color: white;
         line-height: 1.2vw;
         font-size: 4vw;
-        margin: 5vw 5vw 0vw 5vw;
+        margin: 5vw 0vw 0vw 5vw;
         @media screen and(min-width : 1024px) {
-            margin: 0 2vw 0 0;
+            margin: 0 0 0 0;
             font-size: 3vw;
+            display: block;
+            width: 80%;
         }
         
         & h3{
@@ -77,8 +81,9 @@
             height: 45vw;
             object-fit:cover;
             @media screen and(min-width : 1024px) {
-                width: 30vw;
-                height: 14vw;
+                width: 24vw;
+                height: 12vw;
+                
             }
         }
         & i{ 
