--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,33 @@ li {
   list-style: none;
 }
 
+#chargement {
+  border: 12px solid #9356DC;
+  border-radius: 50%;
+  border-top: 12px solid #DDD;
+  width: 40vw;
+  height: 40vw;
+  animation: spin 2s;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  opacity: 0;
+  z-index: 1;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
 header {
   width: 100%;
   box-shadow: 0em 0.5em 1em lightgrey;
@@ -309,20 +336,41 @@ header img {
   }
 }
 .restaurant article i {
+  display: block;
   position: absolute;
   font-size: 6vw;
-  display: inline-block;
+  bottom: 5vw;
   width: 95%;
-  transform: translatey(-12vw);
   text-align: right;
 }
 @media screen and (min-width: 1024px) {
   .restaurant article i {
     font-size: 2vw;
-    transform: translatey(-4vw);
+    bottom: 2vw;
   }
 }
 
+.heart-solid {
+  background: linear-gradient(180deg, #FF79DA, #9356DC);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: absolute;
+  transform-origin: bottom;
+  opacity: 0;
+}
+.heart-solid:active {
+  animation: heart-color 1s linear paused;
+}
+
+@keyframes heart-color {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @media screen and (min-width: 1024px) {
   .container {
     display: flex;
@@ -407,7 +455,6 @@ footer ul li .fa-handshake-angle {
 @media screen and (min-width: 1024px) {
   .entete img {
     height: 20VW;
-    padding: 0;
   }
 }
 .entete_title {
