--- a/sass/Base/_body.scss
+++ b/sass/Base/_body.scss
@@ -17,3 +17,38 @@ a{
 li{
     list-style: none;
 }
+
+#chargement {
+    border: 12px solid $colour-primary;
+    border-radius: 50%;
+    border-top: 12px solid #DDD;
+    width: 40vw;
+    height: 40vw;
+    animation: spin 2s;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    opacity: 0;
+    z-index: 1;
+   
+  }
+  
+  @keyframes spin {
+    
+        
+
+        0% { transform: rotate(0deg);
+            opacity: 1;
+            }
+        100% { transform: rotate(360deg); 
+        opacity: 1;
+        
+            
+        }
+    
+      
+    
+    }
