--- a/sass/Layouts/_menue.scss
+++ b/sass/Layouts/_menue.scss
@@ -1,23 +1,25 @@
-
-.title-menue{
+.title-menue {
     padding-left: 4vw;
     padding-bottom: 2vw;
     font-size: 4vw;
+
     @media screen and(min-width : 1024px) {
         font-size: 1.5vw;
         margin: 0;
-        padding: 0 0 0 1.6vw ;
-                  
-        }
-        &::before {
+        padding: 0 0 0 1.6vw;
+
+    }
+
+    &::before {
         content: "";
-        background:$colour-tertiary;
-        width:10vw;
+        background: $colour-tertiary;
+        width: 10vw;
         height: 0.6vw;
         display: block;
         transform: translateY(6vw);
+
         @media screen and(min-width : 1024px) {
-            width:4vw;
+            width: 4vw;
             height: 0.3vw;
             display: block;
             transform: translateY(2vw)
@@ -25,37 +27,42 @@
 
     }
 }
-.super-container{
-        @media screen and(min-width : 1024px) {
-       display: flex;
-       & article{
-       
+
+.super-container {
     @media screen and(min-width : 1024px) {
-            display: block;
-            width:25% ;
-            margin: 3vw;
-            
-            
-          }
-          
-            
-      }
+        display: flex;
+
+        & article {
+
+            @media screen and(min-width : 1024px) {
+                display: block;
+                width: 25%;
+                margin: 3vw;
+
+
+            }
+
+
+        }
+    }
 }
-}
-.container-menue{
+
+.container-menue {
     padding: 0;
     margin: auto;
+
     @media screen and(min-width : 1024px) {
-        width:90% ;
-         
-      }
-     
-          
-      
-    &_plat{
+        width: 90%;
+
+
+    }
+
+
+
+    &_plat {
         display: block;
         width: 90%;
-        background-color:white ;
+        background-color: white;
         border-radius: 3vw;
         box-shadow: 1vw 1vw 1vw lightgrey;
         line-height: 50%;
@@ -63,23 +70,34 @@
         margin: auto;
         margin-bottom: 3vw;
         position: relative;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: block;
+        padding-right: 20px;
+    
+
         @media screen and(min-width : 1024px) {
-          margin: 1vw 1vw 0 0;
-          padding: 1vw 7vw 1vw 0;
-          border-radius: 1vw;
-          & h3, p, h2{
-              padding-left: 1vw;
-              @media screen and(min-width : 1024px) {
-              font-size: 1.5vw;
-              margin: 0;
-                        
-                
+            margin: 1vw 1vw 0 0;
+            padding: 1vw 7vw 1vw 0;
+            border-radius: 1vw;
+
+            & h3,
+            p,
+            h2 {
+                padding-left: 1vw;
+
+                @media screen and(min-width : 1024px) {
+                    font-size: 1.5vw;
+                    margin: 0;
+                   
+                }
+            }
+            & p{
               }
 
-          }
-           
-          }
-        & .prix{
+        }
+
+        & .prix {
             font-weight: 700;
             position: absolute;
             right: 2vw;
@@ -87,16 +105,18 @@
         }
     }
 }
-.buttom-command{
+
+.buttom-command {
     @include buttom;
     display: block;
     margin: auto;
     margin-top: 10vw;
-    margin-bottom:10vw;
+    margin-bottom: 10vw;
+
     @media screen and(min-width : 1024px) {
-        margin-top:5vw;
+        margin-top: 5vw;
         margin-bottom: 5vw;
-          
-        }
-    
+
+    }
+
 }
