--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@ li {
 #chargement {
   border: 12px solid #9356DC;
   border-radius: 50%;
-  border-top: 12px solid #DDD;
+  border-top: 12px solid rgba(255, 255, 255, 0.1);
   width: 40vw;
   height: 40vw;
   animation: spin 2s;
@@ -48,10 +48,6 @@ li {
     opacity: 1;
   }
 }
-article:hover {
-  box-shadow: 1vw 1vw 1vw lightgrey;
-}
-
 header {
   width: 100%;
   box-shadow: 0em 0.5em 1em lightgrey;
@@ -152,6 +148,11 @@ header img {
   border-radius: 10vw;
   background: rgb(2, 0, 36);
   background: linear-gradient(180deg, #FF79DA, #9356DC);
+  box-shadow: 1vw 1vw 1vw lightgrey;
+}
+.search form button:hover {
+  box-shadow: 1vw 2vw 1vw lightgrey;
+  opacity: 0.9;
 }
 @media all and (min-width: 1024px) {
   .search form button {
@@ -259,9 +260,6 @@ header img {
     margin-bottom: 2vw;
   }
 }
-.restaurant_article:hover {
-  box-shadow: 1vw 1vw 1vw lightgrey;
-}
 .restaurant_new {
   position: absolute;
   font-size: 6vw;
@@ -360,7 +358,7 @@ header img {
 .heart-solid1 {
   position: absolute;
   transition: all 0.3s linear 0s;
-  background: linear-gradient(180deg, #FF79DA, #9356DC);
+  background: linear-gradient(180deg, #9356DC, #FF79DA);
   background-clip: border-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -383,7 +381,7 @@ header img {
     opacity: 0.9;
   }
   75% {
-    transform: scaley(1.1);
+    transform: scaley(1.2);
     opacity: 1;
   }
   90% {
@@ -689,10 +687,15 @@ footer ul li .fa-handshake-angle {
   border-radius: 10vw;
   background: rgb(2, 0, 36);
   background: linear-gradient(180deg, #FF79DA, #9356DC);
+  box-shadow: 1vw 1vw 1vw lightgrey;
   display: block;
   margin: auto;
   margin-top: 10vw;
   margin-bottom: 10vw;
+}
+.buttom-command:hover {
+  box-shadow: 1vw 2vw 1vw lightgrey;
+  opacity: 0.9;
 }
 @media all and (min-width: 1024px) {
   .buttom-command {
@@ -705,6 +708,28 @@ footer ul li .fa-handshake-angle {
   .buttom-command {
     margin-top: 5vw;
     margin-bottom: 5vw;
+  }
+}
+
+:root :after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 200%;
+  z-index: 10;
+  opacity: 0;
+  animation: background-opacity 2s linear forwards;
+}
+
+@keyframes background-opacity {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 0.2;
   }
 }
 
