--- a/sass/Layouts/_restaurant.scss
+++ b/sass/Layouts/_restaurant.scss
@@ -48,15 +48,14 @@
         cursor: pointer;
         position: relative;
         overflow: hidden;
-        width: 90%;
         border-radius: 7%;
         background-color: white;
         line-height: 1.2vw;
         font-size: 4vw;
-        margin: 5vw 0vw 0vw 5vw;
+        margin: 5vw 5vw 0vw 5vw;
 
         @media screen and(min-width : 1024px) {
-            margin: 0 0 0 0;
+            margin: 0 2vw 0 0;
             font-size: 3vw;
             display: block;
             width: 80%;
@@ -113,6 +112,7 @@
     }
 }
 
+
 .heart-solid1 {
 
 
@@ -132,23 +132,24 @@
 .heart-regular {
 
     &:hover+.heart-solid1 {
-                animation: heart-progress 1000ms ease-in-out forwards;
+                animation: heart-progress 500ms ease-in-out forwards;
     }
 }
 
 @keyframes heart-progress {
     0% {
         transform: scaley(1);
-        opacity: .6;
+        opacity: .2;
     }
 
     25% {
         
-        opacity: .8;
+        opacity: .3;
     }
 
     50% {
-        opacity: .9;
+        opacity: .5;
+        transform: scaley(1.1);
     }
 
     75% {
@@ -157,7 +158,7 @@
     }
 
     90% {
-        transform: scaley(1);
+        transform: scaley(1.1);
         opacity: 1;
     }
 
@@ -189,6 +190,28 @@
 
     animation:reduction-indegrient-prix 500ms ease-out forwards;
     }
+    &:hover .reduction-plat{
+        animation: reduction 500ms ease-out forwards;
+        
+    }
+  
+}
+@keyframes reduction{
+    from{
+        padding-right: 0;
+    }
+    to{
+        padding-right:25vw;
+    }
+}
+.reduction-plat{
+  
+   
+    overflow:hidden ;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+   padding-top: 1.5vw;
+   padding-bottom: 1.5vw;
 }
 
     
@@ -196,12 +219,12 @@
 
 .validation-plat{
     position: absolute;
-    bottom: 0;
+    bottom: 0vw;
     right: 0vw;
     background-color: $colour-tertiary;
     
     width: 18vw;
-    height: 19vw;
+    height: 21.5vw;
     transform: translate(20vw);
     & i{
         position: absolute;
@@ -261,3 +284,4 @@ transform: rotate(0deg);
     animation:apparition-plat 2000ms ease-out forwards;
 
 }
+
