--- a/sass/Layouts/_menue.scss
+++ b/sass/Layouts/_menue.scss
@@ -93,6 +93,8 @@
                 }
             }
             & p{
+                display: block;
+                
               }
 
         }
@@ -120,22 +122,24 @@
     }
 
 }
-:root{
-    :after{
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        box-sizing:border-box;
-    width: 100%;
-    height: 200%;
-    z-index: 10;
-    // background-color: rgba(255,255,255,0);
-    opacity:0 ;
-    animation: background-opacity 2s linear forwards
-}
-}
-@keyframes background-opacity {
-   from{ opacity:(0.1)};
-to{opacity: (0.2)};    
-}
+
+
+// :root{
+//     :after{
+//         content: "";
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         box-sizing:border-box;
+//     width: 100%;
+//     height: 200%;
+//     z-index: 10;
+//     // background-color: rgba(255,255,255,0);
+//     opacity:0 ;
+//     animation: background-opacity 2s linear forwards
+// }
+// }
+// @keyframes background-opacity {
+//    from{ opacity:(0.1)};
+// to{opacity: (0.2)};    
+// } 
