--- a/sass/Layouts/_restaurant.scss
+++ b/sass/Layouts/_restaurant.scss
@@ -11,7 +11,7 @@
         margin-bottom: 2vw;
     }
 
-    
+
     &_new {
         position: absolute;
         font-size: 6vw;
@@ -78,9 +78,7 @@
 
             @media screen and(min-width : 1024px) {
                 font-size: 1.5vw;
-                padding: 0 0 1vw 0;
-                margin: 0 0 0 1vw;
-            }
+               }
         }
 
         & img {
@@ -93,6 +91,7 @@
                 width: 24vw;
                 height: 12vw;
 
+
             }
         }
 
@@ -103,6 +102,7 @@
             bottom: 5vw;
             width: 95%;
             text-align: right;
+
             @media screen and(min-width : 1024px) {
                 font-size: 2vw;
                 bottom: 2vw;
@@ -118,7 +118,7 @@
 
     position: absolute;
     transition: all 0.3s linear 0s;
-    background: linear-gradient(180deg,  $colour-primary,$colour-secondary);
+    background: linear-gradient(180deg, $colour-primary, $colour-secondary);
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -126,13 +126,13 @@
 
 
 
-   
+
 }
 
 .heart-regular {
 
     &:hover+.heart-solid1 {
-                animation: heart-progress 500ms ease-in-out forwards;
+        animation: heart-progress 500ms ease-in-out forwards;
     }
 }
 
@@ -143,7 +143,7 @@
     }
 
     25% {
-        
+
         opacity: .3;
     }
 
@@ -176,57 +176,94 @@
     }
 
 }
-.container-menue_plat{
+
+.container-menue_plat {
     overflow: hidden;
 
-    &:hover .validation-plat{
+    &:hover .validation-plat {
         animation: slide-plat 500ms ease-out forwards;
     }
-    &:hover .validation-plat i{
-        animation:validation-plat  500ms ease-in-out forwards;
+
+    &:hover .validation-plat i {
+        animation: validation-plat 500ms ease-in-out forwards;
 
     }
-    &:hover .prix{
+    &:hover .prix {
+        @media screen and(max-width : 1023px) {
 
-    animation:reduction-indegrient-prix 500ms ease-out forwards;
+            animation: reduction-indegrient-prix-mobile 500ms ease-out forwards;
+        }
+        @media screen and(min-width : 1024px) {
+            animation: reduction-indegrient-prix-desktop 500ms ease-out forwards;
+        }
     }
-    &:hover .reduction-plat{
-        animation: reduction 500ms ease-out forwards;
-        
+
+    &:hover .reduction-plat {
+      
+
+        @media screen and(max-width : 1023px) {
+            animation: reduction-mobile 500ms ease-out forwards;
+        }
+
+        @media screen and(min-width : 1024px) {
+            animation: reduction-desktop 500ms ease-out forwards;
+        }
+
     }
-  
+
 }
-@keyframes reduction{
-    from{
+
+@keyframes reduction-mobile {
+    from {
         padding-right: 0;
     }
-    to{
-        padding-right:25vw;
+
+    to {
+        padding-right: 25vw;
     }
 }
-.reduction-plat{
-  
-   
-    overflow:hidden ;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-   padding-top: 1.5vw;
-   padding-bottom: 1.5vw;
+@keyframes reduction-desktop {
+    from {
+        padding-right: 0;
+    }
+
+    to {
+        padding-right: 40%;
+    }
 }
 
-    
-   
+.reduction-plat {
 
-.validation-plat{
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-top: 1.5vw;
+    padding-bottom: 1.5vw;
+  
+}
+
+
+
+
+
+.validation-plat {
     position: absolute;
     bottom: 0vw;
     right: 0vw;
     background-color: $colour-tertiary;
-    
+
     width: 18vw;
     height: 21.5vw;
     transform: translate(20vw);
-    & i{
+
+    @media all and (min-width: 1024px) {
+        width: 7vw;
+        height: 6.5vw;
+        transform: translate(7vw);
+    }
+
+    & i {
         position: absolute;
         font-size: 6vw;
         top: 30%;
@@ -237,51 +274,83 @@
         padding: 1vw;
         background-color: white;
         border-radius: 50%;
+
+        @media all and (min-width: 1024px) {
+            width: 1vw;
+            height: 1vw;
+            font-size: 1.5vw;
+            padding-top: .5vw;
         }
+    }
+
 }
 
 @keyframes slide-plat {
-    from{
-        
-        transform:translate(10vw);
+    from {
+
+        transform: translate(10vw);
 
     }
-    to{
-        
-        transform:translate(0vw);
-     }
-    
+
+    to {
+
+        transform: translate(0vw);
+    }
+
 }
+
 @keyframes validation-plat {
-    from{
-transform: rotate(0deg);
+    from {
+        transform: rotate(0deg);
 
     }
-    to{
+
+    to {
         transform: rotate(360deg);
     }
 }
-@keyframes reduction-indegrient-prix {
-    0%{transform:translate(-2vw);
-    
-    }100%{
-        transform:translate(-18vw);
+
+@keyframes reduction-indegrient-prix-mobile {
+    0% {
+        transform: translate(-2vw);
+
+    }
+
+    100% {
+        transform: translate(-18vw);
+
+
     }
 }
+
+@keyframes reduction-indegrient-prix-desktop {
+    0% {
+        transform: translate(-2vw);
+
+    }
+
+    100% {
+        transform: translate(-6vw);
+
+
+    }
+}
+
 @keyframes apparition-plat {
-    0%{
+    0% {
         opacity: 0%;
         transform: translatey(3vw);
 
     }
-    100%{
+
+    100% {
         opacity: 100%;
         transform: translateY(0);
     }
-    
-}
-.container-menue_plat{
-    animation:apparition-plat 2000ms ease-out forwards;
 
 }
 
+.container-menue_plat {
+    animation: apparition-plat 2000ms ease-out forwards;
+
+}
