--- a/sass/Layouts/_menue.scss
+++ b/sass/Layouts/_menue.scss
@@ -30,11 +30,13 @@
     @media screen and(min-width : 1024px) {
         display: flex;
 
+
         & article {
 
             @media screen and(min-width : 1024px) {
                 display: block;
                 margin-left: 4vw;
+                width: 27.5%;
 
 
             }
@@ -78,6 +80,7 @@
             padding: 1.5vw 0vw 1.5vw 0;
             border-radius: 1vw;
             line-height: 30%;
+            // width: 90%;
 
             & h3,
             p,
@@ -96,6 +99,7 @@
                 @media screen and(min-width : 1024px) {
                     font-size: 1.2vw;
                     padding: 1vw 4vw 0 1vw ;
+                    width: 30%;
                     
                    
                 }
