--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -6,3 +6,5 @@ $colour-primary:$color-purple;
 $colour-secondary:$color-pink;
 $colour-tertiary:$color-watergreen;
 
+$time-apparition-plat:200;
+$order-apparition-plat:1;
