--- a/sass/Base/_body.scss
+++ b/sass/Base/_body.scss
@@ -1,33 +1,39 @@
-body{
+body {
     font-family: roboto;
     margin: 0;
     width: 100%;
     font-size: 4vw;
 }
-input{
-    border:none;
+
+input {
+    border: none;
 }
-a{
-    text-decoration:none;
-    color:black;
-    &:hover{
+
+a {
+    text-decoration: none;
+    color: black;
+
+    &:hover {
         color: black;
     }
 }
-li{
+
+li {
     list-style: none;
 }
-#chargement{
+
+#chargement {
     position: absolute;
     width: 100%;
     height: 100%;
-    cursor: progress;
+    // cursor: progress;
 }
+
 #chargement::before {
     content: "";
     border: 12px solid $colour-primary;
     border-radius: 50%;
-    border-top: 12px solid rgb(255,255,255);
+    border-top: 12px solid rgb(255, 255, 255);
     width: 40vw;
     height: 40vw;
     animation: spin 2s;
@@ -39,56 +45,64 @@ li{
     margin: auto;
     opacity: 0;
     z-index: 2;
-    position: absolute;
+    position: fixed;
 }
-#chargement::after{
-       content: "";
-       background: rgb(255,255,255);
-       opacity: 0;
-        width: 100%;
+
+#chargement::after {
+    content: "";
+    background: rgb(255, 255, 255);
+    opacity: 0;
+    width: 100vw;
+    height:0 ;
+    overflow: hidden;
+    position: fixed;
+    transform-origin: auto;
+    animation: spin-background 2s;
+    z-index: 1;
+
+}
+
+
+@keyframes spin-background {
+
+
+
+    0% {
         height: 100%;
-        overflow: hidden;
-        position: absolute;
-        transform-origin: auto;
-        animation: spin-background 2s;
-        z-index: 1;
-            
+        opacity: 0.6;
     }
-   
-    
-   @keyframes spin-background {
-    
-     
-
-    0% { opacity: 0.6;
-       
-
-        }
-        99%{
-            opacity: 0.6;
-        }
-    100% { opacity: 0; 
-    
-    
-        
-    }
-  
+98%{
+    opacity: 0.6;
 }
-  @keyframes spin {
-    
-     
-
-        0% { transform: rotate(0deg);
-            opacity: 1;
-
-            }
-        100% { transform: rotate(360deg); 
-        opacity: 1;
-        
-            
-        }
-    
-      
-    
+    99% {
+        height: 100%;
+        opacity: 0;
     }
-  
+
+    100% {
+        
+        height: 0%;
+    }
+
+}
+
+@keyframes spin {
+
+
+
+    0% {
+        transform: rotate(0deg);
+        opacity: 1;
+
+    }
+
+    100% {
+        transform: rotate(360deg);
+        opacity: 1;
+
+
+    }
+
+
+
+}
