--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/_variables";
+@import "./utils/_function";
 @import "./layouts/_mixins";
 @import "./base/_body";
 @import "./Layouts/_header";
